--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ youtube_dl
 ffmpeg-python
 python-dotenv
 pyrogram==1.4.16
-pytgcalls==3.0.0.dev21
+tgcalls==3.0.0.dev6
 youtube_search_python==1.4.9
