--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ youtube_dl
 ffmpeg-python
 python-dotenv
 pyrogram==1.4.16
-tgcalls
+tgcalls==0.0.3
 youtube_search_python==1.4.9
-pytgcalls
+pytgcalls==0.0.5
 
 
