--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ python-dotenv
 pyrogram==1.4.16
 pytgcalls==3.0.0.dev21
 youtube_search_python==1.4.9
-tgcalls==3.0.0.dev5
+tgcalls>=3.0.0.dev5,<3.0.0.dev6
 
 
